# se_file_syncer

./: Cargo.toml
src/: main.rs
