[package]
name = "se_file_syncer"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
version = "0.48"
features = [
    "implement",
    "Devices",
    "UI",
    "Data_Xml_Dom",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
]

# [dependencies]
# windows = "0.5.0"
